@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.622 2006/03/14 04:37:12 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.623 2006/03/14 15:30:39 agaffney Exp $
+
+  14 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIStorageDevice.py:
+  reorder minor numbers when loading partitions from disk to match the physical
+  partition order
 
   13 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
